# AdaMAST

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASING.md  RUNTIME_INTEGRATION.md  SKILL.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
adamast/: __init__.py  __main__.py  api.py  cli.py  doctor.py  foundation_cli.py  judges.py  providers.py  traces.py
adamast/core/: README.md  __init__.py  config.py  evidence.py  evidence_export.py  finding_cli.py  fsio.py  lifecycle.py  lineage.py  mast.json  mast.py  options.py  program.py  project_scope.py  redaction.py  reflection.py  repository.py  resolver.py  store.py  taxonomy_data.py  traces.py  traces_cli.py  worker_state.py
adamast/core/assets/: adamast_config.schema.json
adamast/dashboard/: README.md  server.py  status.py  viewer.py  webview.py
adamast/dashboard/assets/: codex_monitor.html  dashboard.html  webview.html
adamast/examples/: README.md  __main__.py  dashboard_demo.py  judge_usage.py  taxonomy.sample.json
adamast/hosts/: __init__.py  shared.py
adamast/hosts/claude_code/: README.md  __init__.py  browser_picker.py  checkpoint.py  config.py  custom.py  dispatcher.py  install.py  learning_jobs.py  manage_hooks.py  native_worker.py  prompts.py  reflection.py  runtime.py  session_routes.py  state.py  subagent_protocol.py  transcript.py  uninstall.py
adamast/hosts/claude_code/assets/: final_gate_tail.md  hook_events.json  standing_prompt.md  taxonomy_worker_agent.md
adamast/hosts/claude_code/hooks/: README.md  __init__.py  post_tool_use.py  post_tool_use_failure.py  session_end.py  session_start.py  stop.py  subagent_stop.py  task_completed.py  user_prompt_submit.py
adamast/hosts/codex/: README.md  __init__.py  browser_picker.py  checkpoint.py  config.py  dispatcher.py  install.py  learning_jobs.py  native_worker.py  prompts.py  runtime.py  selector.py  session_routes.py  state.py  subagent_protocol.py  transcript.py  uninstall.py
adamast/hosts/codex/assets/: SKILL.md  final_gate_tail.md  openai.yaml  standing_prompt.md
adamast/hosts/interactive/: README.md  __init__.py  browser_picker.py  defaults.py  selector.py  session_routes.py  source.py  subagent_protocol.py
adamast/hosts/single_llm/: README.md  __init__.py  cli.py  runtime.py
adamast/hosts/single_llm/assets/: standing_prompt.md
adamast/judges/: README.md  __init__.py  contract.py  selection_summary_judge.py  simple.py
adamast/judges/assets/calibration/: system.md  user.md
adamast/judges/assets/coverage/: system.md  (+1 more)
adamast/judges/reflection_judge/: README.md  __init__.py  judge.py  prompts.py  schema.py  selection.py
adamast/learning/: README.md  api.py  generation.py  import_generation.py  learning_jobs.py  refinement.py  reflection_refinement.py  register_taxonomy.py  worker_contract.py
adamast/learning/assets/: refinement_repair.md  refinement_support_judge.md  reflection_refiner_system.md  reflection_refiner_user.md
adamast/learning/pipeline/: agreement.py  draft.py
adamast/llm/: README.md  learning_calls.py  models.py  reflection_judge_llm.py
adamast/llm/assets/: model_profiles.json  standard_refinement_prompt.md
adamast/pipeline/: __init__.py  agreement.py  draft.py
adamast/protocol/: README.md  __init__.py  checkpoint.py  checkpoint_prompt.py  gate.py
adamast/protocol/assets/: checkpoint_reflection.md  format_repair.md  pre_submission_protocol.md
docs/: AGREEMENT_GATE.md  API_OR_RUNTIME.md  ARCHITECTURE.md  BASELINE.md  BASELINE_GENERATION.md  CLAUDE_CODE.md  CODEX.md  COMPATIBILITY.md  CONCEPTS.md  CONFIGURATION.md  CUSTOMIZATION.md  DASHBOARD.md  EXAMPLE_RUN.md  GENERATION.md  GETTING_STARTED.md  INSTALLATION.md  INTEGRATION.md  INTERACTIVE_CONVERSATIONS_RFC.md  INTERACTIVE_SETUP.md  JUDGE_TYPES.md  JUDGING.md  NATIVE_LEARNING.md  PROVENANCE.md  PROVIDERS.md  README.md  RUNTIME_INTEGRATION.md  SINGLE_LLM.md  TAXONOMIES.md  TAXONOMY_OUTPUTS.md  TRACES_AND_LEARNING.md  TRACE_FORMATS.md  TROUBLESHOOTING.md  WEB_API.md  index.md
docs/assets/stylesheets/: extra.css
examples/: README.md  __init__.py  dashboard_demo.py  judge_usage.py  manual_vendored_generation.py  taxonomy.sample.json  traces.jsonl
scripts/: README.md  build_site.py  pypi_readme.py
src/adamast/: __init__.py  cli.py  viewer.py
src/adamast/assets/: taxonomy_viewer.html
src/adamast/generation/: __init__.py  protocols.py  providers.py
tests/: README.md  __init__.py  test_adapter_contracts.py  test_api.py  test_baseline_pipeline.py  test_browser_picker_wait.py  test_checkpoint_code_citation.py  test_claude_code_integration.py  test_claude_native_learning.py  test_cli.py  test_codex_integration.py  test_codex_learning_jobs.py  test_config.py  test_conversation_scope.py  test_custom_hooks.py  test_dashboard.py  test_doctor.py  test_examples_packaging.py  test_foundation_cli.py  test_fsio.py  test_generation_lifecycle.py  test_import_generation.py  test_judge_implementations.py  test_judge_surface.py  test_judge_types.py  test_judges.py  test_learning_calls.py  test_lifecycle.py  test_mast.py  test_project_scope.py  test_protocol.py  test_providers.py  test_pypi_readme.py  test_redaction.py  test_refinement_lifecycle.py  test_refiner_no_retire.py  test_reflection_parser.py  test_register_taxonomy.py  test_repository.py  test_resolver.py  (+14 more)
tests/fixtures/: adamast_generation_trace.json  real_adamast_generation_output.json
tests/fixtures/taxonomies/: tax-django-orm-001.json  tax-flask-routing-004.json  tax-numpy-array-003.json  tax-placeholder-aaa-005.json  tax-placeholder-bbb-006.json  tax-requests-http-002.json
website/: README.md  index.html
website/assets/: blog.css  fonts.css  landing.css
website/blog/: index.html
website/blogs/: index.html
website/blogs/adamast_paper/: index.html
website/blogs/how-to-use-mast-to-improve-your-agents/: index.html
website/blogs/improving-multi-agent-reasoning-systems-using-mast/: index.html
website/blogs/improving-multi-agent-system-design-using-mast/: index.html
website/blogs/why-do-enterprise-agents-fail-itbench-mast/: index.html
(+18 files in other folders)
