[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adamast"
version = "0.2.0.dev0"
description = "Adaptive failure-mode taxonomy generation and integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
openai = [
  "openai>=2,<3",
]
anthropic = [
  "anthropic>=0.79,<1",
]
google = [
  "google-genai>=1,<2",
]
bedrock = [
  "boto3>=1.43,<2",
]
all = [
  "openai>=2,<3",
  "anthropic>=0.79,<1",
  "google-genai>=1,<2",
  "boto3>=1.43,<2",
]
dev = [
  "pytest>=8,<9",
]
docs = [
  "mkdocs-material>=9.5",
]

[project.scripts]
adamast = "adamast.cli:main"

[project.urls]
Homepage = "https://github.com/multi-agent-systems-failure-taxonomy/AdaMAST"
Documentation = "https://multi-agent-systems-failure-taxonomy.github.io/AdaMAST/docs/"
Repository = "https://github.com/multi-agent-systems-failure-taxonomy/AdaMAST"
Issues = "https://github.com/multi-agent-systems-failure-taxonomy/AdaMAST/issues"
Paper = "https://arxiv.org/abs/2607.16387"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["adamast*"]

[tool.setuptools.package-data]
adamast = ["assets/*.html"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
